cleaned up manifest file

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="An interactive map for Slime Rancher 2"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,7 @@
       integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
       crossorigin=""></script>
 
-    <title>React App</title>
+    <title>SR2 Interactive Map</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
