added curved lines

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
       integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
       crossorigin=""></script>
+    <script src="leaflet.curve.js"></script>
 
     <title>SR2 Interactive Map</title>
   </head>
